# brave-core

./: BUILD.gn  DEPS
android/: brave_java_sources.gni
app/: brave_generated_resources.grd
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_tab_helpers.cc
browser/android/: brave_cosmetic_resources_tab_helper.cc  brave_perf_predictor_tab_helper_delegate_android_impl.cc  brave_perf_predictor_tab_helper_delegate_android_impl.h
browser/extensions/api/: brave_rewards_api.cc
browser/net/: brave_network_delegate_browsertest.cc  brave_network_delegate_browsertest.h
browser/notifications/: notification_platform_bridge_brave_custom_notification.cc  notification_platform_bridge_brave_custom_notification.h
browser/resources/settings/: settings_resources_generated.grdp
browser/ui/: BUILD.gn
browser/ui/webui/: brave_new_tab_message_handler.cc  brave_new_tab_message_handler.h  brave_new_tab_ui.cc  (+1 more)
common/: brave_isolated_worlds.h
components/brave_new_tab_ui/: apiEventsToStore.ts
components/definitions/: newTab.d.ts
components/private_channel/: client_private_channel.cc
components/private_channel/browser/: BUILD.gn  constants.cc  constants.h  private_channel.cc  private_channel.h  request_utils.cc  static_values.h
components/resources/: brave_components_strings.grd
extensions/: BUILD.gn
patches/: chrome-VERSION.patch
test/: BUILD.gn
ui/brave_custom_notification/: ad_notification_view_md.cc  ad_notification_view_md.h  message_popup_view.cc  notification_control_buttons_view.cc  notification_control_buttons_view.h
(+61 files in other folders)
