import("//brave/build/config.gni")
import("//brave/components/private_channel/buildflags.gni")

source_set("browser") {
  public_deps = []

  sources = [
    "private_channel.cc",
    "private_channel.h",
    "request_utils.cc",
    "request_utils.h",
    "static_values.h",
  ]

  deps = [
    "//base",
    "//brave/common",
    "//brave/vendor/brave_base",
    "//chrome/common",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//components/prefs",
    "//components/user_prefs",
    "//content/public/browser",
    "//extensions/browser",
  ]
}
